@@ -14,3 +14,5 @@ rpminject
 rpmlead
 rpmsort
 rpmsignature
+striptofile
+unstripfile
